test/Fail/ParseForallAbsurd.err
ParseForallAbsurd.agda:5.22: error: [ParseError]
)<ERROR>  -> Set1
parseFails x = Set
--...
